# gamify3

./: .gitignore  PLAN.md  README.md  opencode.json  pyproject.toml
.opencode/agents/: blender_asset.md  blender_world.md  godot_gameplay.md  planner.md  validator_build.md
blender/scripts/asset_tools/: export_glb.py  generate_manifest.py
blender/scripts/world_tools/: export_world_glb.py  extract_markers.py
docs/: blender_mcp.md  conventions.md
gamify_addons/blender_mcp/: __init__.py  handlers.py  socket_server.py  utils.py
tools/: blender_cli.py  install_addon.py  manifest_tools.py
tools/blender_mcp/: __init__.py  blender_client.py  protocol.py  server.py
validation/schemas/: asset_manifest.schema.json  marker.schema.json  world_manifest.schema.json
validation/scripts/: validate_manifests.py
